// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutoComplete reducer should handle AUTO_COMPLETE_FAILURE 1`] = `
Object {
  "some-id": Object {
    "error": "oops",
    "isErrorVisible": false,
    "results": Array [],
    "status": "ERROR",
  },
}
`;

exports[`AutoComplete reducer should handle AUTO_COMPLETE_REQUEST 1`] = `
Object {
  "some-id": Object {
    "controller": "models",
    "error": null,
    "searchQuery": "",
    "status": "PENDING",
    "trigger": "INPUT_CHANGE",
  },
}
`;

exports[`AutoComplete reducer should handle AUTO_COMPLETE_RESET 1`] = `
Object {
  "some-id": Object {
    "controller": null,
    "error": null,
    "isErrorVisible": false,
    "results": Array [],
    "searchQuery": "",
    "status": null,
    "trigger": null,
  },
}
`;

exports[`AutoComplete reducer should handle AUTO_COMPLETE_SUCCESS 1`] = `
Object {
  "some-id": Object {
    "controller": "models",
    "error": null,
    "isErrorVisible": false,
    "results": Array [
      Object {
        "category": "category",
        "label": "some results",
      },
    ],
    "searchQuery": "",
    "status": "RESOLVED",
    "trigger": "INPUT_CHANGE",
  },
}
`;

exports[`AutoComplete reducer should return the initial state 1`] = `Object {}`;

exports[`AutoComplete reducer should update state with initial data 1`] = `
Object {
  "some-id": Object {
    "controller": "models",
    "error": null,
    "isErrorVisible": false,
    "results": Array [
      Object {
        "category": "category",
        "label": "some results",
      },
    ],
    "searchQuery": "",
    "status": "RESOLVED",
    "trigger": "COMPONENT_DID_MOUNT",
  },
}
`;
